kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/structs2.sem
// Double definition of same struct name, different contents

struct Foo {
  a: Integer
}

struct Foo {
  b: Boolean
}
